feat: add script

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
                 <form action="">
                     <div id="input-field">
                         <label for="guess">Guess</label>
-                        <input type="text" id="guess" placeholder="_" />
+                        <input type="text" id="guess" />
+                        <span id="input-display"></span>
                     </div>
                     <button>VALIDER</button>
                 </form>
