feat: link to semantic symilarity api

--- a/index.html
+++ b/index.html
@@ -31,26 +31,17 @@
             <div id="score">
                 <span>score: 0</span>
             </div>
+            <h2 id="answer">_ _ _ _</h2>
             <div id="game">
                 <h4 id="hints-title">hints</h4>
-                <div id="hints-board">
-                    <span>orange</span>
-                    <span>orange</span>
-                    <span>orange</span>
-                    <span>orange</span>
-                    <span>orange</span>
-                    <span>orange</span>
-                    <span>orange</span>
-                    <span>orange</span>
-                    <span>orange</span>
-                </div>
+                <div id="hints-board"></div>
                 <form action="">
                     <div id="input-field">
                         <label for="guess">Guess</label>
                         <input type="text" id="guess" />
                         <span id="input-display"></span>
                     </div>
-                    <button>VALIDER</button>
+                    <button id="guess-button">VALIDER</button>
                 </form>
             </div>
         </main>
