--- a/index.html
+++ b/index.html
@@ -29,17 +29,17 @@
         <main>
             <!-- burger menu -->
             <div id="score">
-                <span>score: 0</span>
+                <span>score: </span><span id="score-value">1000</span>
             </div>
             <h2 id="answer">_ _ _ _</h2>
             <div id="game">
                 <h4 id="hints-title">hints</h4>
                 <div id="hints-board"></div>
-                <form action="">
+                <form id="guess-form" action="">
                     <div id="input-field">
                         <label for="guess">Guess</label>
                         <input type="text" id="guess" />
-                        <span id="input-display"></span>
+                        <span id="input-display">_</span>
                     </div>
                     <button id="guess-button">VALIDER</button>
                 </form>
