Improve mobile user experience with dynamic body height and focused input styling

--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
                         <input type="text" id="guess" />
                         <span id="input-display">_</span>
                     </div>
+                    <input
+                        type="submit"
+                        id="submitButton"
+                        value="GUESS !"
+                        hidden
+                    />
                     <button id="guess-button">VALIDER</button>
                 </form>
             </div>
