--- a/index.html
+++ b/index.html
@@ -38,15 +38,17 @@
                 <form id="guess-form" action="">
                     <div id="input-field">
                         <label for="guess">Guess</label>
-                        <input type="text" id="guess" />
+                        <input
+                            type="text"
+                            id="guess"
+                            name="guess"
+                            autocomplete="off"
+                            required
+                            autofocus
+                        />
                         <span id="input-display">_</span>
                     </div>
-                    <input
-                        type="submit"
-                        id="submitButton"
-                        value="GUESS !"
-                        hidden
-                    />
+
                     <button id="guess-button">VALIDER</button>
                 </form>
             </div>
