Improve mobile user experience with dynamic body height and focused input styling

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
             <div id="score">
                 <span>score: </span><span id="score-value">1000</span>
             </div>
-            <h2 id="answer">_ _ _ _</h2>
+            <div id="answer-banner">
+                <h2 id="answer">_ _ _ _</h2>
+            </div>
             <div id="game">
                 <h4 id="hints-title">hints</h4>
                 <div id="hints-board"></div>
